# pixel-badge-apps

./: .gitignore  .pre-commit-config.yaml  README.md  dashboard.yaml  pyproject.toml
.github/workflows/: ci.yml
app/ha_energy/: __init__.py  config.example.json  icon.py  metadata.json
app/net_traffic/: __init__.py  config.example.json  icon.py  metadata.json
docs/: 2026-06-23-ha-energy-app-design.md
docs/superpowers/: PART-B-START-HERE.md
docs/superpowers/plans/: 2026-06-24-pixelbadge-shared-lib-part-a.md
docs/superpowers/specs/: 2026-06-24-net-traffic-and-shared-lib-design.md
lib/pixelbadge/: __init__.py  boot.py  carousel.py  gauges.py  matrix.py  pixelfont.py
mockup/: energy-balance.html  energy-sim.html  ev-icons.html  gallery.html  gallery.js  matrix.js  net-gallery.html  net-options.html  pixelfont.js  render.js  sim.css  sim.js  stats.js
router/: README.md  traffic-faker  traffic-pinger
router/cgi-bin/: traffic
router/etc/init.d/: traffic-pinger
tests/: conftest.py  test_battery.py  test_carousel.py  test_characterize.py  test_config_override.py  test_derivation.py  test_format_dispatch.py  test_formatting.py  test_gauge.py  test_input.py  test_matrix.py  test_net_traffic.py  test_poll.py  test_use_bar.py
tools/: badge.py
